tests/ui/dropck/drop-with-active-borrows-1.stderr
error[E0505]: cannot move out of `a` because it is borrowed
  --> $DIR/drop-with-active-borrows-1.rs:4:10
   |
LL |     let a = "".to_string();
   |         - binding `a` declared here
LL |     let b: Vec<&str> = a.lines().collect();
   |                        - borrow of `a` occurs here
LL |     drop(a);
   |          ^ move out of `a` occurs here
LL |     for s in &b {
   |              -- borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0505`.
